Fix `emptyDir` `sizeLimit` handling in our CRDs (#12068)
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/packaging/install/cluster-operator/048-Crd-kafkamirrormaker2.yaml
+++ b/packaging/install/cluster-operator/048-Crd-kafkamirrormaker2.yaml
@@ -1246,13 +1246,13 @@ spec:
                               properties:
                                 medium:
                                   type: string
+                                  enum:
+                                  - Memory
+                                  description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                 sizeLimit:
-                                  type: object
-                                  properties:
-                                    amount:
-                                      type: string
-                                    format:
-                                      type: string
+                                  type: string
+                                  pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
+                                  description: The total amount of local storage required for this EmptyDir volume (for example 1Gi).
                               description: '`EmptyDir` to use to populate the volume.'
                             persistentVolumeClaim:
                               type: object
@@ -2301,13 +2301,13 @@ spec:
                               properties:
                                 medium:
                                   type: string
+                                  enum:
+                                  - Memory
+                                  description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                 sizeLimit:
-                                  type: object
-                                  properties:
-                                    amount:
-                                      type: string
-                                    format:
-                                      type: string
+                                  type: string
+                                  pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
+                                  description: The total amount of local storage required for this EmptyDir volume (for example 1Gi).
                               description: '`EmptyDir` to use to populate the volume.'
                             persistentVolumeClaim:
                               type: object
@@ -4476,13 +4476,13 @@ spec:
                               properties:
                                 medium:
                                   type: string
+                                  enum:
+                                  - Memory
+                                  description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                 sizeLimit:
-                                  type: object
-                                  properties:
-                                    amount:
-                                      type: string
-                                    format:
-                                      type: string
+                                  type: string
+                                  pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
+                                  description: The total amount of local storage required for this EmptyDir volume (for example 1Gi).
                               description: '`EmptyDir` to use to populate the volume.'
                             persistentVolumeClaim:
                               type: object
@@ -5531,13 +5531,13 @@ spec:
                               properties:
                                 medium:
                                   type: string
+                                  enum:
+                                  - Memory
+                                  description: "Medium represents the type of storage medium should back this volume. Valid values are unset or `Memory`. When not set, it will use the node's default medium."
                                 sizeLimit:
-                                  type: object
-                                  properties:
-                                    amount:
-                                      type: string
-                                    format:
-                                      type: string
+                                  type: string
+                                  pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
+                                  description: The total amount of local storage required for this EmptyDir volume (for example 1Gi).
                               description: '`EmptyDir` to use to populate the volume.'
                             persistentVolumeClaim:
                               type: object
