--- a/systemtest/src/main/resources/log4j2.properties
+++ b/systemtest/src/main/resources/log4j2.properties
@@ -27,6 +27,6 @@ logger.clients.name = org.apache.kafka.clients
 logger.clients.level = INFO
 
 logger.fabric8.name = io.fabric8.kubernetes.client
-logger.fabric8.level = DEBUG
+logger.fabric8.level = TRACE
 logger.jayway.name = com.jayway.jsonpath.internal.path.CompiledPath
 logger.jayway.level = OFF
