Add support for volumeAttributesClassName on persistent storage (#11210)
Signed-off-by: Venkatesh Kannan <venkatesprasad512@gmail.com>
Signed-off-by: Venkatesh Prasad Kannan <personal@venkateshkannan.me>
Co-authored-by: Jakub Scholz <www@scholzj.com>

--- a/api/src/test/resources/crds/v1beta2/040-Crd-kafka.yaml
+++ b/api/src/test/resources/crds/v1beta2/040-Crd-kafka.yaml
@@ -5388,6 +5388,8 @@ spec:
                         - ephemeral
                         - persistent-claim
                         - jbod
+                      volumeAttributesClass:
+                        type: string
                       volumes:
                         type: array
                         items:
@@ -5427,6 +5429,8 @@ spec:
                               enum:
                               - ephemeral
                               - persistent-claim
+                            volumeAttributesClass:
+                              type: string
                           required:
                           - type
                     required:
@@ -6934,6 +6938,8 @@ spec:
                         enum:
                         - ephemeral
                         - persistent-claim
+                      volumeAttributesClass:
+                        type: string
                     required:
                     - type
                   config:
