--- a/api/src/test/resources/crds/v1beta2/045-Crd-kafkanodepool.yaml
+++ b/api/src/test/resources/crds/v1beta2/045-Crd-kafkanodepool.yaml
@@ -89,6 +89,8 @@ spec:
                     - ephemeral
                     - persistent-claim
                     - jbod
+                  volumeAttributesClass:
+                    type: string
                   volumes:
                     type: array
                     items:
@@ -119,6 +121,8 @@ spec:
                           enum:
                           - ephemeral
                           - persistent-claim
+                        volumeAttributesClass:
+                          type: string
                       required:
                       - type
                 required:
@@ -1264,6 +1268,8 @@ spec:
                     - ephemeral
                     - persistent-claim
                     - jbod
+                  volumeAttributesClass:
+                    type: string
                   volumes:
                     type: array
                     items:
@@ -1303,6 +1309,8 @@ spec:
                           enum:
                           - ephemeral
                           - persistent-claim
+                        volumeAttributesClass:
+                          type: string
                       required:
                       - type
                 required:
