--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/045-Crd-kafkanodepool.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/045-Crd-kafkanodepool.yaml
@@ -99,6 +99,9 @@ spec:
                         - persistent-claim
                         - jbod
                       description: "Storage type, must be either 'ephemeral', 'persistent-claim', or 'jbod'."
+                    volumeAttributesClass:
+                      type: string
+                      description: Specifies `VolumeAttributeClass` name for dynamically configuring storage attributes.
                     volumes:
                       type: array
                       items:
@@ -137,6 +140,9 @@ spec:
                               - ephemeral
                               - persistent-claim
                             description: "Storage type, must be either 'ephemeral' or 'persistent-claim'."
+                          volumeAttributesClass:
+                            type: string
+                            description: Specifies `VolumeAttributeClass` name for dynamically configuring storage attributes.
                         required:
                           - type
                       description: List of volumes as Storage objects representing the JBOD disks array.
@@ -1386,6 +1392,9 @@ spec:
                         - persistent-claim
                         - jbod
                       description: "Storage type, must be either 'ephemeral', 'persistent-claim', or 'jbod'."
+                    volumeAttributesClass:
+                      type: string
+                      description: Specifies `VolumeAttributeClass` name for dynamically configuring storage attributes.
                     volumes:
                       type: array
                       items:
@@ -1436,6 +1445,9 @@ spec:
                               - ephemeral
                               - persistent-claim
                             description: "Storage type, must be either 'ephemeral' or 'persistent-claim'."
+                          volumeAttributesClass:
+                            type: string
+                            description: Specifies `VolumeAttributeClass` name for dynamically configuring storage attributes.
                         required:
                           - type
                       description: List of volumes as Storage objects representing the JBOD disks array.
