--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/040-Crd-kafka.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/040-Crd-kafka.yaml
@@ -5389,6 +5389,8 @@ spec:
                             - ephemeral
                             - persistent-claim
                             - jbod
+                        volumeAttributesClass:
+                          type: string
                         volumes:
                           type: array
                           items:
@@ -5428,6 +5430,8 @@ spec:
                                 enum:
                                   - ephemeral
                                   - persistent-claim
+                              volumeAttributesClass:
+                                type: string
                             required:
                               - type
                       required:
@@ -6935,6 +6939,8 @@ spec:
                           enum:
                             - ephemeral
                             - persistent-claim
+                        volumeAttributesClass:
+                          type: string
                       required:
                         - type
                     config:
