--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -91,18 +91,28 @@ jobs:
     if: |-
       ${{ always() &&
         (needs.check-rights.result == 'success' || github.event_name == 'pull_request') &&
-        needs.parse-params.outputs.shouldRun == 'true' 
+        needs.parse-params.outputs.shouldRun == 'true'
       }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      pull-requests: write
     outputs:
       buildRunId: ${{ steps.verify.outputs.buildRunId }}
       buildMetadataSha: ${{ steps.verify.outputs.buildMetadataSha }}
+      commentId: ${{ steps.initial-comment.outputs.commentId }}
     steps:
       - uses: actions/checkout@v5
         with:
           ref: ${{ needs.parse-params.outputs.ref }}
+      - name: Add initial comment
+        id: initial-comment
+        if: ${{ github.event_name == 'issue_comment' }}
+        uses: ./.github/actions/utils/add-comment
+        with:
+          commentMessage: ':hourglass_flowing_sand: System test verification started: [link](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
+
+          Waiting for build to finish...'
       - name: Get merge commit SHA
         id: get-merge-sha
         run: |
@@ -170,6 +180,7 @@ jobs:
         if: ${{ github.event_name == 'issue_comment' && steps.validate.outputs.isValid == 'true' }}
         uses: ./.github/actions/utils/add-comment
         with:
+          commentId: ${{ needs.check-build.outputs.commentId }}
           commentMessage: ':hourglass_flowing_sand: System test verification started: [link](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
 
           ${{ steps.validate.outputs.message }}'
