Revert debug stuff
Signed-off-by: Lukas Kral <lukywill16@gmail.com>

--- a/systemtest/src/main/resources/log4j2.properties
+++ b/systemtest/src/main/resources/log4j2.properties
@@ -20,13 +20,13 @@ rootLogger.level = ${env:STRIMZI_TEST_ROOT_LOG_LEVEL:-DEBUG}
 rootLogger.appenderRef.console.ref = STDOUT
 rootLogger.appenderRef.console.level = ${env:STRIMZI_TEST_LOG_LEVEL:-INFO}
 rootLogger.appenderRef.rolling.ref = RollingFile
-rootLogger.appenderRef.rolling.level = TRACE
+rootLogger.appenderRef.rolling.level = DEBUG
 rootLogger.additivity = false
 
 logger.clients.name = org.apache.kafka.clients
 logger.clients.level = INFO
 
 logger.fabric8.name = io.fabric8.kubernetes.client
-logger.fabric8.level = TRACE
+logger.fabric8.level = OFF
 logger.jayway.name = com.jayway.jsonpath.internal.path.CompiledPath
 logger.jayway.level = OFF
