--- a/systemtest/pom.xml
+++ b/systemtest/pom.xml
@@ -19,22 +19,22 @@
         <strimziRootDirectory>${basedir}${file.separator}..</strimziRootDirectory>
 
         <!--   Once new version of Test-Frame is released, we need to remove all the deps from here and return it back to the main pom.xml     -->
-        <skodjob.test-frame.version>9.999.9</skodjob.test-frame.version>
+        <skodjob.test-frame.version>1.3.0-SNAPSHOT</skodjob.test-frame.version>
     </properties>
 
-<!--    <repositories>-->
-<!--        <repository>-->
-<!--            <name>Central Portal Snapshots</name>-->
-<!--            <id>central-portal-snapshots</id>-->
-<!--            <url>https://central.sonatype.com/repository/maven-snapshots/</url>-->
-<!--            <releases>-->
-<!--                <enabled>false</enabled>-->
-<!--            </releases>-->
-<!--            <snapshots>-->
-<!--                <enabled>true</enabled>-->
-<!--            </snapshots>-->
-<!--        </repository>-->
-<!--    </repositories>-->
+    <repositories>
+        <repository>
+            <name>Central Portal Snapshots</name>
+            <id>central-portal-snapshots</id>
+            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
