--- a/systemtest/src/test/resources/opa/opa.yaml
+++ b/systemtest/src/test/resources/opa/opa.yaml
@@ -27,7 +27,7 @@ items:
           serviceAccountName: opa
           containers:
             - name: opa
-              image: openpolicyagent/opa:1.0.0-static
+              image: docker.io/openpolicyagent/opa:1.10.0-static
               ports:
                 - name: http
                   containerPort: 8181
