Do not cache external snapshot dependencies
Signed-off-by: David Kornel <kornys@outlook.com>

--- a/.azure/templates/steps/system_test_general.yaml
+++ b/.azure/templates/steps/system_test_general.yaml
@@ -161,6 +161,9 @@ jobs:
         CONNECT_IMAGE_WITH_FILE_SINK_PLUGIN: $(connectImage)
       displayName: 'Run systemtests'
 
+    # Clean SNAPSHOT dependencies before caching
+    - template: "./clean_maven_snapshots.yaml"
+
     - task: PublishTestResults@2
       inputs:
         testResultsFormat: JUnit
