add clean up workspace back
Signed-off-by: Lukas Kral <lukywill16@gmail.com>

--- a/.azure/templates/steps/system_test_general.yaml
+++ b/.azure/templates/steps/system_test_general.yaml
@@ -50,6 +50,9 @@ jobs:
     # Log variables
     - template: "log_variables.yaml"
 
+    # Clean up unnecessary tools
+    - template: "clean_up_workspace.yaml"
+
     # Get cached Maven repository
     - template: "./maven_cache.yaml"
     - task: Cache@2
