Try it again and better now
Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

--- a/.github/tests/workflows/parse-comment-template.yaml
+++ b/.github/tests/workflows/parse-comment-template.yaml
@@ -15,8 +15,8 @@ on:
         description: "Kafka version. e.g. '4.0.0' or 'latest'"
         required: false
         default: "latest"
-      profile:
-        description: "Comma-separated or single profile name(s)"
+      pipeline:
+        description: "Comma-separated or single pipeline name(s)"
         required: false
         default: ""
         type: string
@@ -32,7 +32,7 @@ jobs:
         with:
           releaseVersion: ${{ github.event.inputs.releaseVersion }}
           kafkaVersion: ${{ github.event.inputs.kafkaVersion }}
-          profile: ${{ github.event.inputs.profile }}
+          pipeline: ${{ github.event.inputs.pipeline }}
 
       - name: Assert expected outputs
         shell: bash
