--- a/.github/actions/dependencies/setup-kind/action.yml
+++ b/.github/actions/dependencies/setup-kind/action.yml
@@ -80,3 +80,9 @@ runs:
       shell: bash
       run: |
         echo "DOCKER_REGISTRY=$(hostname --ip-address | grep -oE '\b([0-9]{1,3}\.){3}[0-9]{1,3}\b' | awk '$1 != "127.0.0.1" { print $1 }' | head -1):5001" >> $GITHUB_ENV
+
+    # This is used for building connect image used withing STs for runs where already existing images are used (releases)
+    - name: Set CONNECT_BUILD_REGISTRY
+      shell: bash
+      run: |
+        echo "CONNECT_BUILD_REGISTRY=$(hostname --ip-address | grep -oE '\b([0-9]{1,3}\.){3}[0-9]{1,3}\b' | awk '$1 != "127.0.0.1" { print $1 }' | head -1):5001" >> $GITHUB_ENV
