--- a/.github/workflows/run-system-tests.yml
+++ b/.github/workflows/run-system-tests.yml
@@ -186,12 +186,15 @@ jobs:
 
       ############################################################################
       # Build KafkaConnect image with file-sink plugin, skipping if "upgrade"
+      # The final image will be named as value in $CONNECT_IMAGE where registry to where
+      # the image will be push is based on $CONNECT_BUILD_REGISTRY set in setup-kind action
+      # to ensure that workflow won't try to push image into quay
       ############################################################################
       - name: Build KafkaConnect image
         # we want to let Connect image build for different versions of Kafka inside the upgrade/downgrade STs
         if: ${{ !contains(env.PROFILE, 'upgrade') }}
         run: |
-          CONNECT_IMAGE="${DOCKER_REGISTRY}/${DOCKER_ORG}/connect-file-sink:latest"
+          CONNECT_IMAGE="${CONNECT_BUILD_REGISTRY}/${DOCKER_ORG}/connect-file-sink:latest"
           KAFKA_VERSION=$([[ "${KAFKA_VERSION}" == *"latest"* ]] && yq eval '.[] | select(.default) | .version' kafka-versions.yaml || echo "${KAFKA_VERSION}")
           BASE_IMAGE="${DOCKER_REGISTRY}/${DOCKER_ORG}/kafka:${DOCKER_TAG}-kafka-${KAFKA_VERSION}"
           
