--- a/install/cluster-operator/060-Deployment-strimzi-cluster-operator.yaml
+++ b/install/cluster-operator/060-Deployment-strimzi-cluster-operator.yaml
@@ -48,24 +48,27 @@ spec:
             - name: STRIMZI_OPERATION_TIMEOUT_MS
               value: "300000"
             - name: STRIMZI_DEFAULT_KAFKA_EXPORTER_IMAGE
-              value: quay.io/strimzi/kafka:0.49.0-kafka-4.1.0
+              value: quay.io/strimzi/kafka:0.49.0-kafka-4.1.1
             - name: STRIMZI_DEFAULT_CRUISE_CONTROL_IMAGE
-              value: quay.io/strimzi/kafka:0.49.0-kafka-4.1.0
+              value: quay.io/strimzi/kafka:0.49.0-kafka-4.1.1
             - name: STRIMZI_KAFKA_IMAGES
               value: |
                 4.0.0=quay.io/strimzi/kafka:0.49.0-kafka-4.0.0
                 4.0.1=quay.io/strimzi/kafka:0.49.0-kafka-4.0.1
                 4.1.0=quay.io/strimzi/kafka:0.49.0-kafka-4.1.0
+                4.1.1=quay.io/strimzi/kafka:0.49.0-kafka-4.1.1
             - name: STRIMZI_KAFKA_CONNECT_IMAGES
               value: |
                 4.0.0=quay.io/strimzi/kafka:0.49.0-kafka-4.0.0
                 4.0.1=quay.io/strimzi/kafka:0.49.0-kafka-4.0.1
                 4.1.0=quay.io/strimzi/kafka:0.49.0-kafka-4.1.0
+                4.1.1=quay.io/strimzi/kafka:0.49.0-kafka-4.1.1
             - name: STRIMZI_KAFKA_MIRROR_MAKER_2_IMAGES
               value: |
                 4.0.0=quay.io/strimzi/kafka:0.49.0-kafka-4.0.0
                 4.0.1=quay.io/strimzi/kafka:0.49.0-kafka-4.0.1
                 4.1.0=quay.io/strimzi/kafka:0.49.0-kafka-4.1.0
+                4.1.1=quay.io/strimzi/kafka:0.49.0-kafka-4.1.1
             - name: STRIMZI_DEFAULT_TOPIC_OPERATOR_IMAGE
               value: quay.io/strimzi/operator:0.49.0
             - name: STRIMZI_DEFAULT_USER_OPERATOR_IMAGE
