--- a/examples/metrics/strimzi-metrics-reporter/kafka-connect-metrics.yaml
+++ b/examples/metrics/strimzi-metrics-reporter/kafka-connect-metrics.yaml
@@ -1,11 +1,11 @@
-apiVersion: kafka.strimzi.io/v1beta2
+apiVersion: kafka.strimzi.io/v1
 kind: KafkaConnect
 metadata:
   name: my-connect-cluster
   labels:
     app: my-connect-cluster
 spec:
-  version: 4.1.0
+  version: 4.1.1
   replicas: 1
   bootstrapServers: my-cluster-kafka-bootstrap:9092
   metricsConfig:
