--- a/examples/metrics/strimzi-metrics-reporter/kafka-metrics.yaml
+++ b/examples/metrics/strimzi-metrics-reporter/kafka-metrics.yaml
@@ -1,4 +1,4 @@
-apiVersion: kafka.strimzi.io/v1beta2
+apiVersion: kafka.strimzi.io/v1
 kind: KafkaNodePool
 metadata:
   name: controller
@@ -17,7 +17,7 @@ spec:
         kraftMetadata: shared
         deleteClaim: false
 ---
-apiVersion: kafka.strimzi.io/v1beta2
+apiVersion: kafka.strimzi.io/v1
 kind: KafkaNodePool
 metadata:
   name: broker
@@ -36,13 +36,13 @@ spec:
         kraftMetadata: shared
         deleteClaim: false
 ---
-apiVersion: kafka.strimzi.io/v1beta2
+apiVersion: kafka.strimzi.io/v1
 kind: Kafka
 metadata:
   name: my-cluster
 spec:
   kafka:
-    version: 4.1.0
+    version: 4.1.1
     metadataVersion: 4.1-IV1
     listeners:
       - name: plain
