--- a/examples/mirror-maker/kafka-mirror-maker-2-tls.yaml
+++ b/examples/mirror-maker/kafka-mirror-maker-2-tls.yaml
@@ -1,20 +1,17 @@
-apiVersion: kafka.strimzi.io/v1beta2
+apiVersion: kafka.strimzi.io/v1
 kind: KafkaMirrorMaker2
 metadata:
   name: my-mirror-maker-2
 spec:
-  version: 4.1.0
+  version: 4.1.1
   replicas: 1
-  connectCluster: "cluster-b" # Must be the target custer
-  clusters:
-  - alias: "cluster-a" # Source cluster
-    bootstrapServers: cluster-a-kafka-bootstrap:9093
-    tls:
-      trustedCertificates:
-        - secretName: cluster-a-cluster-ca-cert
-          pattern: "*.crt"
-  - alias: "cluster-b" # Target cluster
+  target:
+    alias: cluster-b
     bootstrapServers: cluster-b-kafka-bootstrap:9093
+    groupId: my-mirror-maker-2-group
+    configStorageTopic: my-mirror-maker-2-config
+    offsetStorageTopic: my-mirror-maker-2-offset
+    statusStorageTopic: my-mirror-maker-2-status
     tls:
       trustedCertificates:
         - secretName: cluster-b-cluster-ca-cert
@@ -25,8 +22,12 @@ spec:
       offset.storage.replication.factor: -1
       status.storage.replication.factor: -1
   mirrors:
-  - sourceCluster: "cluster-a"
-    targetCluster: "cluster-b"
+  - source:
+      alias: cluster-a
+      bootstrapServers: cluster-a-kafka-bootstrap:9093
+      trustedCertificates:
+        - secretName: cluster-a-cluster-ca-cert
+          pattern: "*.crt"
     sourceConnector:
       tasksMax: 1
       config:
