--- a/examples/security/tls-auth/connect.yaml
+++ b/examples/security/tls-auth/connect.yaml
@@ -1,4 +1,4 @@
-apiVersion: kafka.strimzi.io/v1beta2
+apiVersion: kafka.strimzi.io/v1
 kind: KafkaUser
 metadata:
   name: my-connect
@@ -13,12 +13,12 @@ spec:
     # Kafka Connects internal topics used to store configuration, offsets or status
     - resource:
         type: group
-        name: connect-cluster
+        name: my-connect-group
       operations:
         - Read
     - resource:
         type: topic
-        name: connect-cluster-configs
+        name: my-connect-configs
       operations:
         - Read
         - Describe
@@ -26,7 +26,7 @@ spec:
         - Create
     - resource:
         type: topic
-        name: connect-cluster-status
+        name: my-connect-status
       operations:
         - Read
         - Describe
@@ -34,17 +34,17 @@ spec:
         - Create
     - resource:
         type: topic
-        name: connect-cluster-offsets
+        name: my-connect-offsets
       operations:
         - Read
         - Describe
         - Write
         - Create
-      # Additional topics and groups used by connectors
+    # Additional topics and groups used by connectors
     # Change to match the topics used by your connectors
     - resource:
         type: group
-        name: connect-cluster
+        name: my-connect-group
       operations:
         - Read
     - resource:
@@ -56,7 +56,7 @@ spec:
         - Write
         - Create
 ---
-apiVersion: kafka.strimzi.io/v1beta2
+apiVersion: kafka.strimzi.io/v1
 kind: KafkaConnect
 metadata:
   name: my-connect
@@ -66,9 +66,13 @@ metadata:
 #  # needing to call the Connect REST API directly
 #    strimzi.io/use-connector-resources: "true"
 spec:
-  version: 4.1.0
+  version: 4.1.1
   replicas: 1
   bootstrapServers: my-cluster-kafka-bootstrap:9093
+  groupId: my-connect-group
+  configStorageTopic: my-connect-configs
+  statusStorageTopic: my-connect-status
+  offsetStorageTopic: my-connect-offsets
   tls:
     trustedCertificates:
       - secretName: my-cluster-cluster-ca-cert
@@ -80,7 +84,7 @@ spec:
       certificate: user.crt
       key: user.key
   config:
-    group.id: connect-cluster
-    offset.storage.topic: connect-cluster-offsets
-    config.storage.topic: connect-cluster-configs
-    status.storage.topic: connect-cluster-status
+    # -1 means it will use the default replication factor configured in the broker
+    config.storage.replication.factor: -1
+    offset.storage.replication.factor: -1
+    status.storage.replication.factor: -1
