--- a/install/user-operator/02-Role-strimzi-user-operator.yaml
+++ b/install/user-operator/02-Role-strimzi-user-operator.yaml
@@ -25,6 +25,13 @@ rules:
   - patch
   - update
 - apiGroups:
+    - "kafka.strimzi.io"
+  resources:
+    # Needed for environments with enabled OwnerReferencesPermissionEnforcement admission controller (e.g. OpenShift)
+    - kafkausers/finalizers
+  verbs:
+    - update
+- apiGroups:
   - ""
   resources:
   - secrets
